Initial support for FFI generation (#793)
* Introduce ffi feature

For this initial version, only types required by the Wickr glue are exported.

* Move aws-mls-codec to same level as other crates

* Enable hex serde feature

Otherwise the build breaks when the crate is not built as part of a workspace.

* Don't generate FFI definitions when in test

There's a circular dependency between `aws-mls` and `test_utils`, which causes duplicate FFI definitions (ones in non-test mode and ones in test mode), which causes the linker to fail.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ members = [
     "aws-mls-crypto-rustcrypto",
     "aws-mls-crypto-hpke",
     "aws-mls-provider-sqlite",
-    "aws-mls-core/aws-mls-codec",
-    "aws-mls-core/aws-mls-codec/derive"
+    "aws-mls-codec",
+    "aws-mls-codec-derive"
 ]
 
 default-members = [
@@ -24,7 +24,7 @@ default-members = [
     "aws-mls-crypto-openssl",
     "aws-mls-crypto-rustcrypto",
     "aws-mls-provider-sqlite",
-    "aws-mls-core/aws-mls-codec"
+    "aws-mls-codec"
 ]
 
 [profile.release-mini]
