--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -33,6 +33,8 @@ std = [
     "thiserror/std"
 ]
 
+ffi = ["dep:safer-ffi", "dep:safer-ffi-gen", "aws-mls-core/ffi"]
+
 # SQLite support
 sqlite = ["std", "aws-mls-provider-sqlite/sqlite"]
 sqlite-bundled = ["sqlite", "aws-mls-provider-sqlite/sqlite-bundled"]
@@ -43,7 +45,7 @@ sqlcipher-bundled = ["sqlite", "aws-mls-provider-sqlite/sqlcipher-bundled"]
 aws-mls-core = { path = "../aws-mls-core", default-features = false, version = "*" }
 aws-mls-identity-x509 = { path = "../aws-mls-identity-x509", default-features = false, version = "*" }
 zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
-aws-mls-codec = { version = "*", path = "../aws-mls-core/aws-mls-codec", default-features = false}
+aws-mls-codec = { version = "*", path = "../aws-mls-codec", default-features = false}
 thiserror = { package = "thiserror-core", version = "1", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
 serde_with = { version = "2.3.1", default-features = false, features = ["alloc", "macros"]}
@@ -61,15 +63,15 @@ portable-atomic-util = { version = "0.1.2", default-features = false, features =
 # Optional dependencies
 aws-mls-provider-sqlite = { path = "../aws-mls-provider-sqlite", version = "*", optional = true }
 aws-mls-crypto-openssl = { path = "../aws-mls-crypto-openssl", optional = true, version = "*" }
+# TODO: https://github.com/GoogleChromeLabs/wasm-bindgen-rayon
 rayon = { version = "1", optional = true }
 arbitrary = { version = "1", features = ["derive"], optional = true }
 serde_json = { version = "^1.0", optional = true }
+safer-ffi = { version = "0.0.10", default-features = false, features = ["alloc"], optional = true }
+safer-ffi-gen = { version = "=0.1.0-rc.1", optional = true }
 
-# Example 
+# Example
 tokio = { version = "1", optional = true }
-
-# TODO: https://github.com/GoogleChromeLabs/wasm-bindgen-rayon
-
 
 [dev-dependencies]
 assert_matches = "1.5.0"
