--- a/aws-mls/test_utils/Cargo.toml
+++ b/aws-mls/test_utils/Cargo.toml
@@ -11,7 +11,7 @@ cfg-if = "1"
 futures = "0.3.25"
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "^1" }
-hex = { version = "0.4" }
+hex = { version = "0.4", features = ["serde"] }
 itertools = "0.10.3"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
