--- a/aws-mls-codec/Cargo.toml
+++ b/aws-mls-codec/Cargo.toml
@@ -5,11 +5,11 @@ edition = "2021"
 
 [features]
 default = ["std"]
-std = ["thiserror-core/std"]
+std = ["dep:thiserror"]
 
 [dependencies]
 aws-mls-codec-derive = { version = "*", path = "../aws-mls-codec-derive" }
-thiserror-core = { version = "1.0.38", default-features = false }
+thiserror = { version = "1.0.40", optional = true }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
