--- a/aws-mls-core/Cargo.toml
+++ b/aws-mls-core/Cargo.toml
@@ -9,7 +9,7 @@ arbitrary = ["dep:arbitrary"]
 benchmark = []
 external_commit = []
 external_proposal = []
-std = ["aws-mls-codec/std", "serde/std", "zeroize/std", "serde_with/std", "base64/std", "num_enum/std", "indexmap/std", "thiserror/std", "indexmap"]
+std = ["aws-mls-codec/std", "serde/std", "zeroize/std", "serde_with/std", "base64/std", "num_enum/std", "indexmap/std", "dep:thiserror", "indexmap"]
 rfc_compliant = ["external_commit"]
 ffi = ["dep:safer-ffi", "dep:safer-ffi-gen"]
 
@@ -21,7 +21,7 @@ zeroize = { version = "1", default-features = false, features = ["alloc", "zeroi
 arbitrary = { version = "1", features = ["derive"], optional = true }
 serde_with = { version = "2.3.1", default-features = false, features = ["alloc", "macros"]}
 base64 = { version = "0.20.0", default-features = false, features = ["alloc"]}
-thiserror = { package = "thiserror-core", version = "1", default-features = false }
+thiserror = { version = "1.0.40", optional = true }
 enum-iterator = "1.1.3"
 num_enum = { version = "0.5", default-features = false}
 indexmap = { version = "1.8.0", features = ["serde"], optional = true }
