Remove serde dependency (#796)
* Remove dependency on serde and rely on mls_codec for serialization internally

Full removal of serde

Fixup

Iterator fixups

more changes

make iter public

* Reduce size of data collection serialization

* Fix formatting

* CI Fixes

* Fixup CI

* Fix after merge

* fixes after merge

* no_std build fixes

* remove empty file

* Update aws-mls/src/group/message_verifier.rs

Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

* Remove empty file

---------

Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

--- a/aws-mls/.gitignore
+++ b/aws-mls/.gitignore
@@ -1,3 +1,5 @@
 # Test data files stored in S3
 /test_data/empty_trees.json
 /test_data/group_state.json
+/test_data/empty_trees.mls
+/test_data/group_state.mls
