--- a/aws-mls-core/Cargo.toml
+++ b/aws-mls-core/Cargo.toml
@@ -9,22 +9,20 @@ arbitrary = ["dep:arbitrary"]
 benchmark = []
 external_commit = []
 external_proposal = []
-std = ["aws-mls-codec/std", "serde/std", "zeroize/std", "serde_with/std", "base64/std", "num_enum/std", "indexmap/std", "dep:thiserror", "indexmap"]
+std = ["aws-mls-codec/std", "zeroize/std", "base64/std", "num_enum/std", "indexmap/std", "dep:thiserror", "indexmap"]
 rfc_compliant = ["external_commit"]
 ffi = ["dep:safer-ffi", "dep:safer-ffi-gen"]
 
 [dependencies]
 async-trait = "0.1.61"
 aws-mls-codec = { version = "*", path = "../aws-mls-codec", default-features = false}
-serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
-zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive", "serde"] }
+zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 arbitrary = { version = "1", features = ["derive"], optional = true }
-serde_with = { version = "2.3.1", default-features = false, features = ["alloc", "macros"]}
 base64 = { version = "0.20.0", default-features = false, features = ["alloc"]}
 thiserror = { version = "1.0.40", optional = true }
 enum-iterator = "1.1.3"
 num_enum = { version = "0.5", default-features = false}
-indexmap = { version = "1.8.0", features = ["serde"], optional = true }
+indexmap = { version = "1.8.0", optional = true }
 safer-ffi = { version = "0.0.10", default-features = false, features = ["alloc"], optional = true }
 safer-ffi-gen = { version = "0.1.0-rc.1", optional = true }
 
