--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Tom Leavy <tom@wickr.com>"]
 edition = "2021"
 
 [features]
-benchmark = ["std", "serde_json", "aws-mls-crypto-openssl", "aws-mls-core/benchmark", "rfc_compliant"]
 default = ["std", "rayon", "rfc_compliant", "tree_index"]
+benchmark = ["std", "aws-mls-crypto-openssl", "aws-mls-core/benchmark", "rfc_compliant"]
 arbitrary = ["std", "dep:arbitrary", "aws-mls-core/arbitrary"]
 rayon = ["std", "dep:rayon"]
 external_client = ["std"]
@@ -27,8 +27,6 @@ std = [
     "hex/std",
     "futures/std",
     "itertools/use_std",
-    "serde/std",
-    "serde_with/std",
     "zeroize/std",
     "dep:debug_tree",
     "dep:thiserror"
@@ -48,12 +46,9 @@ aws-mls-identity-x509 = { path = "../aws-mls-identity-x509", default-features = 
 zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 aws-mls-codec = { version = "*", path = "../aws-mls-codec", default-features = false}
 thiserror = { version = "1.0.40", optional = true }
-serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
-serde_with = { version = "2.3.1", default-features = false, features = ["alloc", "macros"]}
 futures = { version = "0.3.25", default-features = false, features = ["alloc"]}
 itertools = { version = "0.10.3", default-features = false, features = ["use_alloc"]}
 enum-iterator = "1.1.3"
-bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc", "serde"]}
 cfg-if = "1"
 async-trait = "0.1.61"
 debug_tree = { version = "0.4.0", optional = true }
@@ -67,7 +62,6 @@ aws-mls-crypto-openssl = { path = "../aws-mls-crypto-openssl", optional = true, 
 # TODO: https://github.com/GoogleChromeLabs/wasm-bindgen-rayon
 rayon = { version = "1", optional = true }
 arbitrary = { version = "1", features = ["derive"], optional = true }
-serde_json = { version = "^1.0", optional = true }
 safer-ffi = { version = "0.0.10", default-features = false, features = ["alloc"], optional = true }
 safer-ffi-gen = { version = "=0.1.0-rc.1", optional = true }
 
@@ -80,6 +74,7 @@ criterion = { version = "0.3.5", features = ["async_futures", "html_reports"] }
 futures-test = "0.3.25"
 serde_json = "^1.0"
 rand = "0.8"
+serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
 hex = { version = "^0.4.3", default-features = false, features = ["serde", "alloc"] }
 test_utils = { path = "test_utils" }
 
