Out of order packet feature (#798)
* Out of order packet feature

* Update aws-mls/tests/client_tests.rs

Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

---------

Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -17,8 +17,9 @@ state_update = []
 private_message = []
 custom_proposal = []
 tree_index = []
+out_of_order = ["private_message"]
 external_proposal = ["aws-mls-core/external_proposal", "aws-mls-identity-x509/external_proposal"]
-rfc_compliant = ["external_commit", "state_update", "private_message", "custom_proposal", "external_proposal"]
+rfc_compliant = ["external_commit", "state_update", "private_message", "custom_proposal", "external_proposal", "out_of_order"]
 
 std = [
     "aws-mls-core/std",
