--- a/aws-mls-core/Cargo.toml
+++ b/aws-mls-core/Cargo.toml
@@ -25,6 +25,7 @@ num_enum = { version = "0.5", default-features = false}
 indexmap = { version = "1.8.0", optional = true }
 safer-ffi = { version = "0.0.10", default-features = false, features = ["alloc"], optional = true }
 safer-ffi-gen = { version = "0.1.0-rc.1", optional = true }
+maybe-async = "0.2.7"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
