--- a/aws-mls-identity-x509/Cargo.toml
+++ b/aws-mls-identity-x509/Cargo.toml
@@ -9,7 +9,9 @@ std = ["aws-mls-core/std", "dep:thiserror"]
 external_proposal = []
 
 [dependencies]
+async-trait = "0.1.68"
 aws-mls-core = { path = "../aws-mls-core", default-features = false, version = "*" }
+maybe-async = "0.2.7"
 thiserror = { version = "1.0.40", optional = true }
 
 [dev-dependencies]
