--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -21,17 +21,7 @@ out_of_order = ["private_message"]
 external_proposal = ["aws-mls-core/external_proposal", "aws-mls-identity-x509/external_proposal"]
 rfc_compliant = ["external_commit", "state_update", "private_message", "custom_proposal", "external_proposal", "out_of_order"]
 
-std = [
-    "aws-mls-core/std",
-    "aws-mls-codec/std",
-    "aws-mls-identity-x509/std",
-    "hex/std",
-    "futures/std",
-    "itertools/use_std",
-    "zeroize/std",
-    "dep:debug_tree",
-    "dep:thiserror"
-]
+std = ["aws-mls-core/std", "aws-mls-codec/std", "aws-mls-identity-x509/std", "hex/std", "futures/std", "itertools/use_std", "zeroize/std", "dep:debug_tree", "dep:thiserror"]
 
 ffi = ["dep:safer-ffi", "dep:safer-ffi-gen", "aws-mls-core/ffi"]
 
@@ -68,6 +58,7 @@ safer-ffi-gen = { version = "=0.1.0-rc.1", optional = true }
 
 # Example
 tokio = { version = "1", optional = true }
+maybe-async = { version = "0.2.7" }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
@@ -89,10 +80,12 @@ aws-mls-crypto-rustcrypto = { path = "../aws-mls-crypto-rustcrypto", features = 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 aws-mls-crypto-openssl = { path = "../aws-mls-crypto-openssl", version = "*"}
 
+[target.'cfg(sync)'.dependencies]
+maybe-async = { version = "0.2.7", features = ["is_sync"] }
+
 [[example]]
 name = "basic_usage"
 required-features = ["tokio"]
-
 
 [[bench]]
 name = "encap"
