--- a/aws-mls/test_utils/Cargo.toml
+++ b/aws-mls/test_utils/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = { version = "^1" }
 hex = { version = "0.4", features = ["serde"] }
 itertools = "0.10.3"
+maybe-async = "0.2.7"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 aws-mls-crypto-rustcrypto = { path = "../../aws-mls-crypto-rustcrypto", features = ["browser"], version = "*" }
