--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -54,7 +54,7 @@ aws-mls-crypto-openssl = { path = "../aws-mls-crypto-openssl", optional = true, 
 rayon = { version = "1", optional = true }
 arbitrary = { version = "1", features = ["derive"], optional = true }
 safer-ffi = { version = "0.0.10", default-features = false, features = ["alloc"], optional = true }
-safer-ffi-gen = { version = "=0.1.0-rc.1", optional = true }
+safer-ffi-gen = { version = "=0.1.0-rc.2", default-features = false, optional = true }
 
 # Example
 tokio = { version = "1", optional = true }
