Define psk feature (#805)
* Define psk feature

Size of firmware simulator:
- Before: 79.2 KB
- After: 75.4 KB

Making the PSK store a no-op didn't reduce the binary size,  at least in the firmware simulator project.

Resolves #770

* Make filter_out_invalid_psks be identity when the psk feature is off

Suggested by Marta as this saves some additional space in the binary.

* Go down the rabbit hole of conditionally compiling PreSharedKeyProposal

--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -19,7 +19,8 @@ custom_proposal = []
 tree_index = []
 out_of_order = ["private_message"]
 external_proposal = ["aws-mls-core/external_proposal", "aws-mls-identity-x509/external_proposal"]
-rfc_compliant = ["external_commit", "state_update", "private_message", "custom_proposal", "external_proposal", "out_of_order"]
+psk = []
+rfc_compliant = ["external_commit", "state_update", "private_message", "custom_proposal", "external_proposal", "out_of_order", "psk"]
 
 std = ["aws-mls-core/std", "aws-mls-codec/std", "aws-mls-identity-x509/std", "hex/std", "futures/std", "itertools/use_std", "zeroize/std", "dep:debug_tree", "dep:thiserror"]
 
