--- a/aws-mls-core/Cargo.toml
+++ b/aws-mls-core/Cargo.toml
@@ -10,8 +10,9 @@ benchmark = []
 external_commit = []
 external_proposal = []
 std = ["aws-mls-codec/std", "zeroize/std", "base64/std", "num_enum/std", "indexmap/std", "dep:thiserror", "indexmap"]
-rfc_compliant = ["external_commit"]
+rfc_compliant = ["external_commit", "x509"]
 ffi = ["dep:safer-ffi", "dep:safer-ffi-gen"]
+x509 = []
 
 [dependencies]
 async-trait = "0.1.61"
