--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -18,11 +18,12 @@ private_message = []
 custom_proposal = []
 tree_index = []
 out_of_order = ["private_message"]
-external_proposal = ["aws-mls-core/external_proposal", "aws-mls-identity-x509/external_proposal"]
+external_proposal = ["aws-mls-core/external_proposal", "aws-mls-identity-x509?/external_proposal"]
 psk = []
-rfc_compliant = ["external_commit", "state_update", "private_message", "custom_proposal", "external_proposal", "out_of_order", "psk"]
+x509 = ["aws-mls-core/x509", "dep:aws-mls-identity-x509"]
+rfc_compliant = ["external_commit", "state_update", "private_message", "custom_proposal", "external_proposal", "out_of_order", "psk", "x509"]
 
-std = ["aws-mls-core/std", "aws-mls-codec/std", "aws-mls-identity-x509/std", "hex/std", "futures/std", "itertools/use_std", "zeroize/std", "dep:debug_tree", "dep:thiserror"]
+std = ["aws-mls-core/std", "aws-mls-codec/std", "aws-mls-identity-x509?/std", "hex/std", "futures/std", "itertools/use_std", "zeroize/std", "dep:debug_tree", "dep:thiserror"]
 
 ffi = ["dep:safer-ffi", "dep:safer-ffi-gen", "aws-mls-core/ffi"]
 
@@ -34,7 +35,7 @@ sqlcipher-bundled = ["sqlite", "aws-mls-provider-sqlite/sqlcipher-bundled"]
 
 [dependencies]
 aws-mls-core = { path = "../aws-mls-core", default-features = false, version = "*" }
-aws-mls-identity-x509 = { path = "../aws-mls-identity-x509", default-features = false, version = "*" }
+aws-mls-identity-x509 = { path = "../aws-mls-identity-x509", default-features = false, version = "*", optional = true }
 zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 aws-mls-codec = { version = "*", path = "../aws-mls-codec", default-features = false}
 thiserror = { version = "1.0.40", optional = true }
