Build one feature at a time (#814)
* Fix errors and warnings per feature

This fixes the errors and warnings when building the project one feature enabled at a time.

* Build one feature at a time in CI

--- a/aws-mls-core/Cargo.toml
+++ b/aws-mls-core/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [features]
 default = ["std", "rfc_compliant"]
-arbitrary = ["dep:arbitrary"]
+arbitrary = ["std", "dep:arbitrary"]
 benchmark = []
 external_commit = []
 external_proposal = []
