--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -19,10 +19,11 @@ custom_proposal = []
 tree_index = []
 out_of_order = ["private_message"]
 prior_epoch = []
-external_proposal = ["aws-mls-core/external_proposal", "aws-mls-identity-x509?/external_proposal"]
+by_ref_proposal = []
+external_proposal = ["aws-mls-core/external_proposal", "aws-mls-identity-x509?/external_proposal", "by_ref_proposal"]
 psk = []
 x509 = ["aws-mls-core/x509", "dep:aws-mls-identity-x509"]
-rfc_compliant = ["external_commit", "state_update", "private_message", "custom_proposal", "external_proposal", "out_of_order", "psk", "x509", "prior_epoch"]
+rfc_compliant = ["external_commit", "state_update", "private_message", "custom_proposal", "external_proposal", "out_of_order", "psk", "x509", "prior_epoch", "by_ref_proposal"]
 
 std = ["aws-mls-core/std", "aws-mls-codec/std", "aws-mls-identity-x509?/std", "hex/std", "futures/std", "itertools/use_std", "zeroize/std", "dep:debug_tree", "dep:thiserror"]
 
