Add preallocate feature for mls-codec (#832)
* Prep for removal of MlsSize

* faster serialization

* make fast_serialize default

* Change handling of iterators

--- a/aws-mls-codec/Cargo.toml
+++ b/aws-mls-codec/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.3.0"
 edition = "2021"
 
 [features]
-default = ["std"]
+default = ["std", "preallocate"]
+preallocate = []
 std = ["dep:thiserror"]
 
 [dependencies]
