--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -5,12 +5,13 @@ authors = ["Tom Leavy <tom@wickr.com>"]
 edition = "2021"
 
 [features]
-default = ["std", "rayon", "rfc_compliant", "tree_index"]
+default = ["std", "rayon", "rfc_compliant", "tree_index", "fast_serialize"]
 benchmark = ["std", "aws-mls-crypto-openssl", "aws-mls-core/benchmark", "rfc_compliant"]
 arbitrary = ["std", "dep:arbitrary", "aws-mls-core/arbitrary"]
 rayon = ["std", "dep:rayon"]
 external_client = ["std"]
 grease = ["std"]
+fast_serialize = ["aws-mls-core/fast_serialize"]
 secret_tree_access = []
 external_commit = ["aws-mls-core/external_commit"]
 state_update = []
