--- a/aws-mls-core/Cargo.toml
+++ b/aws-mls-core/Cargo.toml
@@ -14,6 +14,7 @@ std = ["aws-mls-codec/std", "zeroize/std", "base64/std", "num_enum/std", "indexm
 rfc_compliant = ["external_commit", "x509"]
 ffi = ["dep:safer-ffi", "dep:safer-ffi-gen"]
 x509 = []
+test_suite = ["dep:serde", "dep:serde_json", "dep:hex", "dep:itertools"]
 
 [dependencies]
 async-trait = "0.1.61"
@@ -28,6 +29,11 @@ indexmap = { version = "1.8.0", optional = true }
 safer-ffi = { version = "0.0.10", default-features = false, features = ["alloc"], optional = true }
 safer-ffi-gen = { version = "=0.1.0-rc.3", default-features = false, optional = true }
 maybe-async = "0.2.7"
+
+serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
+serde_json = { version = "^1.0", optional = true }
+hex = { version = "^0.4.3", default-features = false, features = ["serde", "alloc"], optional = true }
+itertools = { version = "0.10", optional = true }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
