--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -17,15 +17,15 @@ jobs:
     - name: Clippy Full RFC Compliance
       run: cargo clippy --all-targets --all-features --workspace -- -D warnings
     - name: Clippy Bare Bones
-      run: cargo clippy --all-targets --no-default-features --features std --workspace -- -D warnings
+      run: cargo clippy --all-targets --no-default-features --features std,test_utils --workspace -- -D warnings
     - name: Test Full RFC Compliance
       run: cargo test --all-features --verbose --workspace
     - name: Test Bare Bones
-      run: cargo test --no-default-features --features std --verbose --workspace
+      run: cargo test --no-default-features --features std,test_utils  --verbose --workspace
     - name: Test Sync Full RFC
       run: RUSTFLAGS='--cfg sync' cargo test --all-features --lib --verbose --workspace 
     - name: Test Sync Bare Bones 
-      run: RUSTFLAGS='--cfg sync' cargo test --no-default-features --lib --features std --verbose --workspace
+      run: RUSTFLAGS='--cfg sync' cargo test --no-default-features --lib --features std,test_utils --verbose --workspace
     - name: Examples
       working-directory: aws-mls
       run: cargo run --example basic_usage --features=tokio 
