--- a/.github/workflows/benchmarks_merge.yml
+++ b/.github/workflows/benchmarks_merge.yml
@@ -23,11 +23,14 @@ jobs:
       - name: Copy benchmark files to test data
         working-directory: aws-mls
         run: |
-          aws s3 cp s3://benchmark-wickr-mls/empty_trees.json ./test_data/empty_trees.json
-          aws s3 cp s3://benchmark-wickr-mls/group_state.json ./test_data/group_state.json
-      - name: Run benchmark
+          aws s3 cp s3://benchmark-wickr-mls/empty_trees.mls ./test_data/empty_trees.mls
+          aws s3 cp s3://benchmark-wickr-mls/group_state.mls ./test_data/group_state.mls
+      - name: Run async benchmark
         working-directory: aws-mls
-        run: ( set -o pipefail; cargo bench --features benchmark --bench encap --bench decap --bench group_serialize --bench group_commit --bench group_application --bench secret_tree_serialize -- --output-format bencher | tee output.txt )
+        run: ( set -o pipefail; cargo bench --features benchmark --bench encap --bench group_serialize --bench group_commit --bench group_application --bench secret_tree_serialize -- --output-format bencher | tee output.txt )
+      - name: Run sync benchmark
+        working-directory: aws-mls
+        run: ( set -o pipefail; RUSTFLAGS='--cfg sync' cargo bench --features benchmark --bench decap -- --output-format bencher | tee -a output.txt )
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
         with:
