Improve commit benchmark. Use less non-public API in benchmarks. (#859)
* Improve commit benchmark. Use less non-public API  in benchmarks.

* Fixup

* Try AWS LC on github

* Revert "Try AWS LC on github"

* Fixup

* Apply suggestions from code review

Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

---------

Co-authored-by: Marta Mularczyk <mulmarta@amazon.com>
Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

--- a/.github/workflows/benchmarks_merge.yml
+++ b/.github/workflows/benchmarks_merge.yml
@@ -27,10 +27,10 @@ jobs:
           aws s3 cp s3://benchmark-wickr-mls/group_state.mls ./test_data/group_state.mls
       - name: Run async benchmark
         working-directory: aws-mls
-        run: ( set -o pipefail; cargo bench --features benchmark --bench encap --bench group_serialize --bench group_commit --bench group_application --bench secret_tree_serialize -- --output-format bencher | tee output.txt )
+        run: ( set -o pipefail; cargo bench --features benchmark --bench encap --bench group_serialize --bench group_application --bench secret_tree_serialize -- --output-format bencher | tee output.txt )
       - name: Run sync benchmark
         working-directory: aws-mls
-        run: ( set -o pipefail; RUSTFLAGS='--cfg sync' cargo bench --features benchmark --bench decap -- --output-format bencher | tee -a output.txt )
+        run: ( set -o pipefail; RUSTFLAGS='--cfg sync' cargo bench --features benchmark --bench decap --bench group_commit --bench group_receive_commit-- --output-format bencher | tee -a output.txt )
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
         with:
