--- a/.github/workflows/benchmarks_pr.yml
+++ b/.github/workflows/benchmarks_pr.yml
@@ -26,8 +26,8 @@ jobs:
           aws s3 cp s3://benchmark-wickr-mls/group_state.mls ./test_data/group_state.mls
       - name: Run async benchmark
         working-directory: aws-mls
-        run: ( set -o pipefail; cargo bench --features benchmark --bench encap --bench group_serialize --bench group_commit --bench group_application --bench secret_tree_serialize -- --output-format bencher | tee output.txt )
+        run: ( set -o pipefail; cargo bench --features benchmark --bench encap --bench group_serialize --bench group_application --bench secret_tree_serialize -- --output-format bencher | tee output.txt )
       - name: Run sync benchmark
         working-directory: aws-mls
-        run: ( set -o pipefail; RUSTFLAGS='--cfg sync' cargo bench --features benchmark --bench decap -- --output-format bencher | tee -a output.txt )
+        run: ( set -o pipefail; RUSTFLAGS='--cfg sync' cargo bench --features benchmark --bench decap --bench group_commit --bench group_receive_commit -- --output-format bencher | tee -a output.txt )
       
