Re-enable and fix WASM test (#863)
* Re-enable and fix WASM test

* Fix client tests

* Test WASM with all features

---------

Co-authored-by: Marta Mularczyk <mulmarta@amazon.com>

--- a/.github/workflows/wasm_build.yml
+++ b/.github/workflows/wasm_build.yml
@@ -19,7 +19,7 @@ jobs:
       run: wasm-pack test --headless --chrome --release -- --features="browser"
     - name: WASM aws-mls
       working-directory: aws-mls
-      run: wasm-pack test --headless --chrome --release -- --no-default-features --features="grease"
+      run: wasm-pack test --headless --chrome --release
     - name: WASM aws-mls-core
       working-directory: aws-mls-core
       run: wasm-pack test --headless --chrome --release
