Make external caching of proposals a bit more friendly (and fix links in docs) (#864)
* Make caching proposals on server easier and add example

* Fix doc links

* Appease clippy

* Apply suggestions from code review

Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

---------

Co-authored-by: Marta Mularczyk <mulmarta@amazon.com>
Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -109,6 +109,10 @@ required-features = ["tokio", "x509"]
 name = "large_group"
 required-features = ["tokio"]
 
+[[example]]
+name = "basic_server_usage"
+required-features = ["tokio", "external_client"]
+
 [[bench]]
 name = "encap"
 harness = false
