--- a/aws-mls-crypto-awslc/Cargo.toml
+++ b/aws-mls-crypto-awslc/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 aws-lc-rs = "1.2.0"
-aws-lc-sys = "0.9.0"
+aws-lc-sys = { version = "0.9.0", features = ["bindgen"] }
 aws-mls-core = { path = "../aws-mls-core", version = "*" }
 aws-mls-crypto-hpke = { path = "../aws-mls-crypto-hpke", version = "*" }
 aws-mls-crypto-traits = { path = "../aws-mls-crypto-traits", version = "*" }
