--- a/aws-mls-core/Cargo.toml
+++ b/aws-mls-core/Cargo.toml
@@ -10,7 +10,7 @@ benchmark = []
 external_commit = []
 external_proposal = []
 fast_serialize = ["aws-mls-codec/preallocate"]
-std = ["aws-mls-codec/std", "zeroize/std", "base64/std", "num_enum/std", "indexmap/std", "dep:thiserror", "indexmap"]
+std = ["aws-mls-codec/std", "zeroize/std", "base64/std", "num_enum/std", "indexmap/std", "safer-ffi-gen?/std", "dep:thiserror", "indexmap"]
 rfc_compliant = ["external_commit", "x509"]
 ffi = ["dep:safer-ffi", "dep:safer-ffi-gen"]
 x509 = []
@@ -27,7 +27,7 @@ enum-iterator = "1.1.3"
 num_enum = { version = "0.5", default-features = false}
 indexmap = { version = "1.8.0", optional = true }
 safer-ffi = { version = "0.1.0", default-features = false, optional = true }
-safer-ffi-gen = { version = "0.6.0", default-features = false, optional = true }
+safer-ffi-gen = { version = "0.8.0", default-features = false, optional = true }
 maybe-async = "0.2.7"
 
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
