--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -27,7 +27,7 @@ psk = []
 x509 = ["aws-mls-core/x509", "dep:aws-mls-identity-x509"]
 rfc_compliant = ["external_commit", "state_update", "private_message", "all_extensions", "custom_proposal", "external_proposal", "out_of_order", "psk", "x509", "prior_epoch", "by_ref_proposal"]
 
-std = ["aws-mls-core/std", "aws-mls-codec/std", "aws-mls-identity-x509?/std", "hex/std", "futures/std", "itertools/use_std", "zeroize/std", "dep:debug_tree", "dep:thiserror"]
+std = ["aws-mls-core/std", "aws-mls-codec/std", "aws-mls-identity-x509?/std", "hex/std", "futures/std", "itertools/use_std", "safer-ffi-gen?/std", "zeroize/std", "dep:debug_tree", "dep:thiserror"]
 
 ffi = ["dep:safer-ffi", "dep:safer-ffi-gen", "aws-mls-core/ffi"]
 
@@ -62,7 +62,7 @@ aws-mls-crypto-openssl = { path = "../aws-mls-crypto-openssl", optional = true, 
 rayon = { version = "1", optional = true }
 arbitrary = { version = "1", features = ["derive"], optional = true }
 safer-ffi = { version = "0.1.0", default-features = false, optional = true }
-safer-ffi-gen = { version = "0.6.0", default-features = false, optional = true }
+safer-ffi-gen = { version = "0.8.0", default-features = false, optional = true }
 
 # Example
 tokio = { version = "1", optional = true, features = ["macros", "rt-multi-thread"] }
