--- a/.github/workflows/no_std_build.yml
+++ b/.github/workflows/no_std_build.yml
@@ -14,9 +14,9 @@ jobs:
     - name: Clippy
       run: cargo +nightly clippy --no-default-features -p aws-mls -- -D warnings
     - name: Test
-      run: cargo +nightly test --no-default-features --features test_utils --verbose -p aws-mls
+      run: cargo +nightly test --no-default-features --features test_util --verbose -p aws-mls --lib --test '*'
     - name: Test Full RFC Compliance
-      run: cargo +nightly test --no-default-features --features rfc_compliant,test_utils --verbose -p aws-mls
+      run: cargo +nightly test --no-default-features --features rfc_compliant,test_util --verbose -p aws-mls
     - name: Build MLS Embedded
       run: cargo +nightly build --package aws-mls --lib --no-default-features --target thumbv6m-none-eabi
     - name: Build MLS Embedded Full RFC Compliance
