--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -36,7 +36,9 @@ sqlite-bundled = ["sqlite", "aws-mls-provider-sqlite/sqlite-bundled"]
 sqlcipher = ["sqlite", "aws-mls-provider-sqlite/sqlcipher"]
 sqlcipher-bundled = ["sqlite", "aws-mls-provider-sqlite/sqlcipher-bundled"]
 
-test_utils = ["dep:once_cell", "aws-mls-crypto-openssl"]
+test_util = []
+benchmark_util = ["test_util", "default", "dep:aws-mls-crypto-openssl"]
+fuzz_util = ["test_util", "default", "dep:once_cell", "dep:aws-mls-crypto-openssl"]
 
 
 [dependencies]
@@ -54,6 +56,7 @@ debug_tree = { version = "0.4.0", optional = true }
 spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex", "portable_atomic"]}
 portable-atomic = { version = "*", default-features = false, features = ["critical-section"]}
 portable-atomic-util = { version = "0.1.2", default-features = false, features = ["alloc"]}
+maybe-async = { version = "0.2.7" }
 
 # Optional dependencies
 aws-mls-provider-sqlite = { path = "../aws-mls-provider-sqlite", version = "*", default-features = false, optional = true }
@@ -64,10 +67,6 @@ arbitrary = { version = "1", features = ["derive"], optional = true }
 safer-ffi = { version = "0.1.0", default-features = false, optional = true }
 safer-ffi-gen = { version = "0.9.1", default-features = false, optional = true }
 once_cell = { version = "1.18", optional = true }
-
-# Example
-tokio = { version = "1", optional = true, features = ["macros", "rt-multi-thread"] }
-maybe-async = { version = "0.2.7" }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
@@ -88,52 +87,50 @@ aws-mls-crypto-rustcrypto = { path = "../aws-mls-crypto-rustcrypto", features = 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 aws-mls-crypto-openssl = { path = "../aws-mls-crypto-openssl", version = "*"}
 
-[target.'cfg(sync)'.dependencies]
-maybe-async = { version = "0.2.7", features = ["is_sync"] }
-
-# Benchmarks
+# Benchmark crypto engine swaps
 [target.'cfg(awslc)'.dependencies]
 aws-mls-crypto-awslc = { path = "../aws-mls-crypto-awslc" }
+
 [target.'cfg(rustcrypto)'.dependencies]
 aws-mls-crypto-rustcrypto = { path = "../aws-mls-crypto-rustcrypto" }
 
 
 [[example]]
 name = "basic_usage"
-required-features = ["tokio"]
+required-features = []
 
 [[example]]
 name = "x509"
-required-features = ["tokio", "x509"]
+required-features = ["x509"]
 
 [[example]]
 name = "large_group"
-required-features = ["tokio"]
+required-features = []
 
 [[example]]
 name = "basic_server_usage"
-required-features = ["tokio", "external_client"]
+required-features = ["external_client"]
 
 [[bench]]
 name = "group_commit"
 harness = false
-required-features = ["test_utils"]
+required-features = ["benchmark_util"]
 
 [[bench]]
 name = "group_receive_commit"
 harness = false
-required-features = ["test_utils"]
+required-features = ["benchmark_util"]
 
 [[bench]]
 name = "group_application"
 harness = false
-required-features = ["test_utils"]
+required-features = ["benchmark_util"]
 
 [[bench]]
 name = "group_serialize"
 harness = false
-required-features = ["test_utils"]
+required-features = ["benchmark_util"]
 
 [[test]]
 name = "client_tests"
-required-features = ["test_utils"]
+required-features = ["test_util"]
