--- a/aws-mls-crypto-awslc/Cargo.toml
+++ b/aws-mls-crypto-awslc/Cargo.toml
@@ -11,6 +11,10 @@ aws-mls-crypto-hpke = { path = "../aws-mls-crypto-hpke", version = "*" }
 aws-mls-crypto-traits = { path = "../aws-mls-crypto-traits", version = "*" }
 thiserror = "1.0.40"
 zeroize = { version = "1", features = ["zeroize_derive"] }
+maybe-async = "0.2.7"
 
 [dev-dependencies]
 aws-mls-core = { path = "../aws-mls-core", version = "*", features = ["test_suite"] }
+
+[target.'cfg(mls_build_async)'.dependencies]
+async-trait = "0.1.74"
