--- a/aws-mls-crypto-openssl/Cargo.toml
+++ b/aws-mls-crypto-openssl/Cargo.toml
@@ -16,6 +16,7 @@ aws-mls-crypto-traits = { path = "../aws-mls-crypto-traits", version = "*" }
 thiserror = "1.0.40"
 enum-iterator = "1.1.2"
 zeroize = { version = "1", features = ["zeroize_derive"] }
+maybe-async = "0.2.7"
 
 [dev-dependencies]
 hex = { version = "^0.4.3", features = ["serde"] }
@@ -23,3 +24,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "^1.0" }
 assert_matches = "1.5.0"
 aws-mls-core = { path = "../aws-mls-core", version = "*", features = ["test_suite"] }
+
+[target.'cfg(mls_build_async)'.dependencies]
+async-trait = "0.1.74"
