--- a/aws-mls-crypto-awslc/Cargo.toml
+++ b/aws-mls-crypto-awslc/Cargo.toml
@@ -15,6 +15,7 @@ zeroize = { version = "1", features = ["zeroize_derive"] }
 maybe-async = "0.2.7"
 
 [dev-dependencies]
+assert_matches = "1.5.0"
 aws-mls-core = { path = "../aws-mls-core", version = "*", features = ["test_suite"] }
 futures-test = "0.3.25"
 
