Parallel identity validation (#910)
* Benchmark adding members to a group

* Validate identities in parallel

Resolves #501

* Parallelize a couple more steps

Thank you Marta for the suggestions!

--- a/mls-rs/Cargo.toml
+++ b/mls-rs/Cargo.toml
@@ -112,6 +112,11 @@ name = "basic_server_usage"
 required-features = ["external_client"]
 
 [[bench]]
+name = "group_add"
+harness = false
+required-features = ["benchmark_util"]
+
+[[bench]]
 name = "group_commit"
 harness = false
 required-features = ["benchmark_util"]
