--- a/mls-rs-core/Cargo.toml
+++ b/mls-rs-core/Cargo.toml
@@ -12,10 +12,9 @@ license = "Apache-2.0 OR MIT"
 [features]
 default = ["std", "rfc_compliant", "fast_serialize"]
 arbitrary = ["std", "dep:arbitrary"]
-external_commit = []
 fast_serialize = ["mls-rs-codec/preallocate"]
 std = ["mls-rs-codec/std", "zeroize/std", "base64/std", "num_enum/std", "indexmap/std", "safer-ffi-gen?/std", "dep:thiserror", "indexmap"]
-rfc_compliant = ["external_commit", "x509"]
+rfc_compliant = ["x509"]
 ffi = ["dep:safer-ffi", "dep:safer-ffi-gen"]
 x509 = []
 test_suite = ["dep:serde", "dep:serde_json", "dep:hex", "dep:itertools"]
