--- a/mls-rs/Cargo.toml
+++ b/mls-rs/Cargo.toml
@@ -17,7 +17,6 @@ external_client = ["std"]
 grease = ["std"]
 fast_serialize = ["mls-rs-core/fast_serialize"]
 secret_tree_access = []
-external_commit = ["mls-rs-core/external_commit"]
 state_update = []
 private_message = []
 custom_proposal = []
@@ -28,7 +27,7 @@ by_ref_proposal = []
 all_extensions = []
 psk = []
 x509 = ["mls-rs-core/x509", "dep:mls-rs-identity-x509"]
-rfc_compliant = ["external_commit", "state_update", "private_message", "all_extensions", "custom_proposal", "out_of_order", "psk", "x509", "prior_epoch", "by_ref_proposal"]
+rfc_compliant = ["state_update", "private_message", "all_extensions", "custom_proposal", "out_of_order", "psk", "x509", "prior_epoch", "by_ref_proposal"]
 
 std = ["mls-rs-core/std", "mls-rs-codec/std", "mls-rs-identity-x509?/std", "hex/std", "futures/std", "itertools/use_std", "safer-ffi-gen?/std", "zeroize/std", "dep:debug_tree", "dep:thiserror"]
 
